--- a/lifeTimes/DESCRIPTION
+++ b/lifeTimes/DESCRIPTION
@@ -9,3 +9,18 @@ License: CC-BY
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
+Imports: 
+    circlize,
+    ComplexHeatmap,
+    dplyr,
+    ggdendro,
+    ggplot2,
+    ggpubr,
+    grid,
+    rlang,
+    stringr,
+    tidyr
+Suggests: 
+    rmarkdown,
+    knitr
+VignetteBuilder: knitr
