--- a/lifeTimes.Rcheck/00_pkg_src/lifeTimes/DESCRIPTION
+++ b/lifeTimes.Rcheck/00_pkg_src/lifeTimes/DESCRIPTION
@@ -5,12 +5,14 @@ Version: 0.1.0
 Author: Lucas Dent <dent.lucas@gmail.com.
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: This package uses cross-correlation analysis to study coupling of biological process in time series data. 
-License: CC-BY
+License: MIT + file LICENSE
 Encoding: UTF-8
+LazyData: true
 RoxygenNote: 7.1.2
 Imports: circlize, ComplexHeatmap, dplyr, ggdendro, ggplot2, ggpubr,
-        grid, rlang, stringr, tidyr
+        grid, magrittr, readr, rlang, stringr, tidyr, viridis
 Suggests: rmarkdown, knitr
 VignetteBuilder: knitr
+Depends: R (>= 2.10)
 NeedsCompilation: no
-Packaged: 2021-12-23 01:36:35 UTC; ldent
+Packaged: 2021-12-23 23:37:34 UTC; ldent
