--- a/lifeTimes/DESCRIPTION
+++ b/lifeTimes/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Lucas Dent <dent.lucas@gmail.com.
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: This package uses cross-correlation analysis to study coupling of biological process in time series data. 
-License: CC-BY
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
@@ -17,10 +17,15 @@ Imports:
     ggplot2,
     ggpubr,
     grid,
+    magrittr,
+    readr,
     rlang,
     stringr,
-    tidyr
+    tidyr,
+    viridis
 Suggests: 
     rmarkdown,
     knitr
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
