--- a/lifeTimes/NAMESPACE
+++ b/lifeTimes/NAMESPACE
@@ -18,8 +18,10 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(ggdendro,ggdendrogram)
 importFrom(ggpubr,ggarrange)
+importFrom(ggpubr,rremove)
 importFrom(magrittr,"%>%")
 importFrom(stats,ccf)
 importFrom(stringr,str_split_fixed)
