Multiple essential improvements: - added internal datasets to use a default input, i) lts_catchmentsAndRivers, ii) lts_defaultVariables - removed lts_defineVars function - fixed multiple "lts_variables" typos, missing the "." variable prefix - removed @export tags for internal functions - removed calling of functions from source functions script "lts_wide_ccf_df_cluster_diff" -  build and R CMD check passing -- main user exposed function renamed to "lts_input()"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,8 @@
 
 export(lts_clusterPlot)
 export(lts_couplingPlot)
-export(lts_defineVars)
+export(lts_input)
 export(lts_leadLagClusterPlot)
-export(lts_lifeTimesInput)
 import(ggplot2)
 import(magrittr)
 importFrom(ComplexHeatmap,Heatmap)
