Fixes and improvements to plotting: - removed global export of dendrogram variables - changed so only lifeTiems ouptut needs to be supplied to plotting functions, user input variables no longer need to be supplied -fixed hardcoding of uniqueID names in plotting functions -made last function of lts_input() call stack, return user input variables in a list with CCF calculations so that these can be supplied to plotting functions as a bundle.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ import(ggplot2)
 import(magrittr)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(circlize,colorRamp2)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,ungroup)
 importFrom(ggdendro,dendro_data)
 importFrom(ggdendro,ggdendrogram)
