includes function to generate list of comparisons

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(lts_clusterPlot)
 export(lts_couplingPlot)
 export(lts_input)
 export(lts_leadLagClusterPlot)
+export(lts_pairsMaker)
 import(ggplot2)
 import(magrittr)
 importFrom(ComplexHeatmap,Heatmap)
@@ -17,5 +18,6 @@ importFrom(ggdendro,segment)
 importFrom(ggplot2,ggplot)
 importFrom(ggpubr,ggarrange)
 importFrom(ggpubr,rremove)
+importFrom(gtools,combinations)
 importFrom(magrittr,"%>%")
 importFrom(viridis,scale_color_viridis)
