Revert "following build error in old versions of ubuntu, changed pairs genera…"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,6 @@ importFrom(ggdendro,segment)
 importFrom(ggplot2,ggplot)
 importFrom(ggpubr,ggarrange)
 importFrom(ggpubr,rremove)
+importFrom(gtools,combinations)
 importFrom(magrittr,"%>%")
 importFrom(viridis,scale_color_viridis)
