--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,10 @@ Imports:
     viridis
 Suggests: 
     rmarkdown,
-    knitr
+    knitr,
+    testthat (>= 3.0.0),
+    covr
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
+Config/testthat/edition: 3
