--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -20,7 +20,7 @@ jobs:
           - {os: windows-latest, r: 'release'}
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+       #  - {os: ubuntu-latest,   r: 'oldrel-1'}. #test removed because 'quantreg' build fails after recent 'quantreg' update
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
