new summary stats and clustering fuctions, lts_TESTING, is current prefix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(lts_clusterPlot)
 export(lts_couplingPlot)
 export(lts_leadLagClusterPlot)
 export(lts_pairsMaker)
+export(lts_summarise_ccf)
 import(ggplot2)
 import(magrittr)
 importFrom(ComplexHeatmap,Heatmap)
