completely rewrite of functions to separate summary statistics and clustering. A wide range of summ stats now calculated in summ stats function, with the option to cluster on these in cluster function, followed by plotting in plot function. Sum stat, cluster and plotting now working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(catchmentsAndRivers)
 export(lts_calc)
+export(lts_clustPlot)
 export(lts_clusterPlot)
 export(lts_couplingPlot)
 export(lts_leadLagClusterPlot)
