fixed plotting alignment for lts_plot_ccfs, added code for functions to make PCA and PLSR analysis of summary statistics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(lts_plot_ClustSum)
 export(lts_plot_ccfs)
 export(lts_plot_coupled)
 export(lts_summarise_ccf)
+import(egg)
 import(ggplot2)
+import(grid)
 import(magrittr)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(circlize,colorRamp2)
@@ -19,7 +21,6 @@ importFrom(ggdendro,dendro_data)
 importFrom(ggdendro,ggdendrogram)
 importFrom(ggdendro,segment)
 importFrom(ggplot2,ggplot)
-importFrom(ggpubr,ggarrange)
 importFrom(ggpubr,rremove)
 importFrom(magrittr,"%>%")
 importFrom(viridis,scale_color_viridis)
