DESCRIPTION and dependencies/imports fixes to pass R CMD check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,12 @@ Imports:
     circlize,
     ComplexHeatmap,
     dplyr,
+    egg,
     ggdendro,
     ggplot2,
     ggpubr,
     grid,
+    gridExtra,
     magrittr,
     readr,
     rlang,
