--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(lts_summarise_ccf)
 import(egg)
 import(ggplot2)
 import(grid)
+import(gridExtra)
 import(magrittr)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(circlize,colorRamp2)
