added lts_summs_clean and lts_prcom to cleanup data and plot principle components, added README tutorial  on plotting principle components

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,12 @@ export(lts_pairsMaker)
 export(lts_plot_ClustSum)
 export(lts_plot_ccfs)
 export(lts_plot_coupled)
+export(lts_prcomp)
 export(lts_summarise_ccf)
+export(lts_summs_clean)
 import(egg)
 import(ggplot2)
 import(grid)
-import(gridExtra)
 import(magrittr)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(circlize,colorRamp2)
@@ -24,4 +25,6 @@ importFrom(ggdendro,segment)
 importFrom(ggplot2,ggplot)
 importFrom(ggpubr,rremove)
 importFrom(magrittr,"%>%")
+importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_wider)
 importFrom(viridis,scale_color_viridis)
